--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "build": "node_modules/.bin/rollup src/editor.js -f iife -o src/editor.bundle.js -p @rollup/plugin-node-resolve; lezer-generator src/lang.grammar -o src/lang.js"
+        "build": "node_modules/.bin/rollup -c"
     },
     "dependencies": {
         "@codemirror/basic-setup": "^0.19.0",
