--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "node_modules/.bin/rollup -c",
-    "watch": "node_modules/.bin/rollup -c -w"
+    "build": "node_modules\\.bin\\rollup -c",
+    "watch": "node_modules\\.bin\\rollup -c -w"
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.19.0",
