--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c4c-lib",
-  "version": "0.2.3-runner",
+  "version": "0.2.4",
   "description": "Code4Community's tools for programming games.",
   "main": "src/index.js",
   "scripts": {
