--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "c4c-lib",
-  "version": "0.2.51",
+  "version": "0.2.6",
   "description": "Code4Community's tools for programming games.",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "grammar": "node_modules/.bin/lezer-generator src/lang.grammar -o src/lang.js",
-    "start": "webpack-dev-server --config test.config.js --open"
+    "grammar": "node_modules/.bin/lezer-generator src/lang.grammar -o src/lang.js"
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.12.0",
@@ -17,13 +16,6 @@
     "codemirror": "^6.0.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.9",
-    "babel": "^6.23.0",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.6.0",
-    "prettier": "2.4.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4"
+    "prettier": "2.4.1"
   }
 }
